# django-kursach

./: pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mailing.py
mailing/migrations/: 0001_initial.py  0002_mailingattempt.py  0003_client_owner_mailing_is_active_mailing_owner.py
mailing/templates/mailing/: client_confirm_delete.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html
templates/: base.html
users/: forms.py  mixins.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: access_denied.html  login.html  manager_list.html  register.html  user_block_form.html  user_blocked.html  user_list.html
